--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -267,3 +267,16 @@ code{
   border: 1px solid #4c964d;
   color: #FFF; }
 
+.searchForm {
+  /*background-color:#f0f0f0;
+  position:fixed;
+  top:-50px;*/
+  height:40px;
+  width:100%;
+  text-align:left;
+  margin-top: 50px;
+  margin-left: 0px;
+  transition: margin-top 0.4s;
+  }
+
+
