basic layout works

--- a/_includes/themes/twitter/default_bak.html
+++ b/_includes/themes/twitter/default_bak.html
@@ -33,30 +33,39 @@
   </head>
 
   <body>
-
-    <div id="container">
-
-
-      <div id="header">
+    
+  <!-- Place banner image aligned with column layout --> 
+  <div class="top-area">
+  <div class="container-fluid">
+    <div class="row-fluid">
+      <!-- <div class="span3" /> -->
+      <div class="span10">
+	    <!-- Column center (banner goes here) -->
         <div class="banner-header">
         <a href="/"><img src="{{ BASE_PATH }}/images/banner-new.png" alt="bitsgalore banner" class="img-center" width="970" height="150"></a>
 		  <div class="banner-tagline">digital preservation - file formats</div>
         </div>
       </div>
-
-      <div id="sidebarLeft">
-      <!-- Empty -->
-     <p>Hello there earthlings!</p>
+      <!-- <div class="span3"/> -->
+    </div>
+  </div>
+  </div>
+  
+  <div class="container-fluid">
+	<div class="row-fluid">
+	  <div class="span2">
       </div>
-
-      <div id="content">
+	
+	  <div class="span5">
+	    <!-- Column center (main content) -->
         <div class="content">
           {{ content }}
-        </div>
-      </div>
+        </div>	
+	  </div>
 
+	  <div class="span4">
+	    <!-- Column right -->
 
-      <div id="sidebarRight">
         <div class="sidebar">
           <p>
           <a href="{{ HOME_PATH }}"><img src="{{ BASE_PATH }}/images/bgava.png" alt="bitsgalore avatar"  width="159" height="200"></a>	  	
@@ -83,21 +92,29 @@
           </ul>
         </div>
 
+	  </div>
+
+      <div class="span2">
+        <!-- Empty -->
       </div>
 
-      <div id="sidebarLeft">
-      <!-- Empty -->
+	</div>
+	
+	<hr>
+	<div class="row-fluid">
+	  
+      <div class="span2">
+        <!-- Empty -->   
       </div>
 
-      <div id="footer">
+	  <div class="span5">
         <footer>
 	      <p><small>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
             with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
             and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a></small></p>
         </footer>
-      </div>	
-
-    </div>
-
+      </div>
+	</div>
+  </div>
   </body>
 </html>
