--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -13,20 +13,22 @@
 
 #sidebarLeft {
     float:left;
-    min-width: 200px;
-    width:10%;
+    width:20%;
 }
 
 #content {
     float:left;
-    width:62%;
-    min-width: 740px;
-    max-width: 740px;
+    width:45%;
+    max-width: 730px;
+    min-width: 500px;
+    /*min-width: 740px;
+    max-width: 740px;*/
 }
 
 #sidebarRight {
     float:left;
-    width:28%;
+    width:35%;
+    min-width: 500px;
 }
 
 #footer {
@@ -122,7 +124,7 @@ footer {
   font-family: Verdana, Geneva, sans-serif;
   text-align: left;
   /*color:#595959;*/
-  margin-left: 50px;
+  margin-left: 150px;
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 0px;
