--- a/_includes/themes/twitter/post.html
+++ b/_includes/themes/twitter/post.html
@@ -2,8 +2,7 @@
  <h1>{{ page.title }} {% if page.tagline %}<small>{{page.tagline}}</small>{% endif %}</h1>
 </div> -->
 
-<div class="row-fluid post-full">
-  <div class="span12">
+<div class="post-full">
     <h1>{{ page.title }}</h1>
     <div class="date">
       <span>{{ page.date | date_to_long_string }}</span>
@@ -46,5 +45,4 @@
     </div>
     <hr>
     {% include JB/comments %}
-  </div>
 </div>
