--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -45,8 +45,7 @@
       </div>
 
       <div id="sidebarLeft">
-      <!-- Empty -->
-      <p></p>
+        <!-- Empty -->
       </div>
 
       <div id="content">
@@ -56,7 +55,7 @@
       </div>
 
       <div id="sidebarRight">
-        <div class="sidebar">
+        <div class="sidebarGroup">
           <p>
           <a href="{{ HOME_PATH }}"><img src="{{ BASE_PATH }}/images/bgava.png" alt="bitsgalore avatar"  width="159" height="200"></a>	  	
 		  </p>
@@ -66,13 +65,13 @@
           <h2><a href="https://github.com/bitsgalore/bitsgalore.github.io/issues" target="_blank">Report a problem with this site</a></h2>
         </div>
 
-	    <div class="sidebar">
+	    <div class="sidebarGroup">
 		  <h2><a href="{{ site.url }}/rss.xml">RSS feed</a></h2>
 		  <h2><a href="{{ site.url }}/atom.xml">ATOM feed</a></h2>
           <h2><a href="{{ site.url }}/archive.html">Archive</a></h2>
 	    </div>
 
-	    <div class="sidebar">
+	    <div class="sidebarGroup">
 	      <!-- Tag cloud -->
           <h2><a href="{{ site.url }}/tags.html">Tags</a></h2>
           {% include JB/setup %}
@@ -86,9 +85,8 @@
 
       <div id="footer">
 
-        <div id="sidebarLeft">
+        <div id="sidebarFooterLeft">
           <!-- Empty -->
-          <p></p>
         </div>
 
         <footer>
