--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -82,6 +82,12 @@ text-decoration: underline;
 
 .post-entry{padding-bottom:25px;}
 
+.post-entry .date {
+  margin-bottom: 20px;
+  font-weight: bold;
+  color: #666666;
+}
+
 .post-entry small{
   color: #666666;
 }
