--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -260,3 +260,17 @@ code{
   border: 1px solid #4c964d;
   color: #FFF; }
 
+  .github-comments ul{
+    list-style-type: none;
+    border-top: 1px solid black;
+    margin-left: 0px;
+}
+
+.github-comments li{
+  border-bottom: 1px solid black;
+  margin-left: 0px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding-left: 20px;
+  padding-top: 20px
+}
