deleted alt comments file

--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -264,6 +264,8 @@ code{
     list-style-type: none;
     border-top: 1px solid black;
     margin-left: 0px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .github-comments li{
