--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -58,5 +58,5 @@ request.send();
 <div class="github-comments">
 	<h2>Comments</h2>
     <ul id="gh-comments-list"></ul>
-	<p id="leave-a-comment"><a target="_blank" href="https://github.com/bitsgalore/bitsgalore.github.io/issues/{{page.comment_id}}">Post a comment</a></p>
+	<p id="leave-a-comment"><a target="_blank" href="https://github.com/bitsgalore/bitsgalore.github.io/issues/{{page.comment_id}}">Post a comment</a>  (opens Github issue page for this post)</p>
 </div>
