--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,4 +1,5 @@
 <script>
+
 const GH_API_URL = 'https://api.github.com/repos/bitsgalore/bitsgalore.github.io/issues/{{page.comment_id}}/comments';
 
 let request = new XMLHttpRequest();
@@ -56,7 +57,8 @@ request.send();
 <hr>
 
 <div class="github-comments">
-	<h2>Comments</h2>
+    <!-- Adapted from https://aristath.github.io/blog/static-site-comments-using-github-issues-api -->
+    <h2>Comments</h2>
     <ul id="gh-comments-list"></ul>
 	<p id="leave-a-comment"><a target="_blank" href="https://github.com/bitsgalore/bitsgalore.github.io/issues/{{page.comment_id}}">Post a comment</a>  (opens Github issue page for this post)</p>
 </div>
