change body font to Merriweather

--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -1,6 +1,20 @@
 ---
 ---
 
+/* merriweather-regular - latin */
+@font-face {
+  font-family: 'Merriweather';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../../../../fonts/merriweather-v21-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Merriweather Regular'), local('Merriweather-Regular'),
+       url('../../../../fonts/merriweather-v21-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../../../../fonts/merriweather-v21-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../../../../fonts/merriweather-v21-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../../../../fonts/merriweather-v21-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../../../../fonts/merriweather-v21-latin-regular.svg#Merriweather') format('svg'); /* Legacy iOS */
+}
+
 #container {
     /*width:1200px;
     margin:20px auto;*/
@@ -134,7 +148,7 @@ footer {
     }
 
 body{
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-family: 'Merriweather';
     font-size: 20px;
     line-height: 30px;
     color: #404040;
