--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -1,18 +1,18 @@
 ---
 ---
 
-/* merriweather-regular - latin */
+/* noto-serif-regular - latin */
 @font-face {
-  font-family: 'Merriweather';
+  font-family: 'Noto Serif';
   font-style: normal;
   font-weight: 400;
-  src: url('../../../../fonts/merriweather-v21-latin-regular.eot'); /* IE9 Compat Modes */
-  src: local('Merriweather Regular'), local('Merriweather-Regular'),
-       url('../../../../fonts/merriweather-v21-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../../../../fonts/merriweather-v21-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../../../../fonts/merriweather-v21-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('../../../../fonts/merriweather-v21-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../../../../fonts/merriweather-v21-latin-regular.svg#Merriweather') format('svg'); /* Legacy iOS */
+  src: url('../../../../fonts/noto-serif-v8-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Noto Serif'), local('NotoSerif'),
+       url('../../../../fonts/noto-serif-v8-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../../../../fonts/noto-serif-v8-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../../../../fonts/noto-serif-v8-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../../../../fonts/noto-serif-v8-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../../../../fonts/noto-serif-v8-latin-regular.svg#NotoSerif') format('svg'); /* Legacy iOS */
 }
 
 #container {
@@ -111,6 +111,7 @@ footer {
   
 .sidebarGroup{
   font-family: Verdana, Geneva, sans-serif;
+  font-size:18px;
   text-align: left;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -120,7 +121,6 @@ footer {
   }
   
 .sidebarGroup p{
-  font-size:16px;
   line-height:18px;
   }  
 
@@ -148,9 +148,9 @@ footer {
     }
 
 body{
-    font-family: 'Merriweather';
-    font-size: 20px;
-    line-height: 34px;
+    font-family: 'Noto Serif';
+    font-size: 22px;
+    line-height: 33px;
     color: #404040;
   }
   
