--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -1,19 +1,34 @@
 ---
 ---
 
-/* noto-serif-regular - latin */
+/* lato-regular - latin */
 @font-face {
-  font-family: 'Noto Serif';
+  font-family: 'Lato';
   font-style: normal;
   font-weight: 400;
-  src: url('../../../../fonts/noto-serif-v8-latin-regular.eot'); /* IE9 Compat Modes */
-  src: local('Noto Serif'), local('NotoSerif'),
-       url('../../../../fonts/noto-serif-v8-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../../../../fonts/noto-serif-v8-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../../../../fonts/noto-serif-v8-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('../../../../fonts/noto-serif-v8-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../../../../fonts/noto-serif-v8-latin-regular.svg#NotoSerif') format('svg'); /* Legacy iOS */
+  src: url('../../../../fonts/lato-v16-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Lato Regular'), local('Lato-Regular'),
+       url('../../../../fonts/lato-v16-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../../../../fonts/lato-v16-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../../../../fonts/lato-v16-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../../../../fonts/lato-v16-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../../../../fonts/lato-v16-latin-regular.svg#Lato') format('svg'); /* Legacy iOS */
 }
+
+/* francois-one-regular - latin */
+@font-face {
+  font-family: 'Francois One';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../../../../fonts/francois-one-v14-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Francois One Regular'), local('FrancoisOne-Regular'),
+       url('../../../../fonts/francois-one-v14-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../../../../fonts/francois-one-v14-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../../../../fonts/francois-one-v14-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../../../../fonts/francois-one-v14-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../../../../fonts/francois-one-v14-latin-regular.svg#FrancoisOne') format('svg'); /* Legacy iOS */
+}
+
 
 #container {
     /*width:1200px;
@@ -64,9 +79,9 @@
   }
 
 .banner-tagline{
-  font-family: Verdana, Geneva, sans-serif;
-  font-size:30px;
-  letter-spacing:4px;
+  font-family: 'Lato';
+  font-size:32px;
+  letter-spacing:5px;
   text-align:center;
   color:#595959;
   padding-top: 30px;
@@ -110,7 +125,7 @@ footer {
 }
   
 .sidebarGroup{
-  font-family: Verdana, Geneva, sans-serif;
+  font-family: 'Lato';
   font-size:18px;
   text-align: left;
   padding-top: 20px;
@@ -121,17 +136,21 @@ footer {
   }
   
 .sidebarGroup p{
-  line-height:18px;
+  line-height:20px;
   }  
 
 .sidebarGroup h2{
-  font-size:16px;
-  line-height:18px;
+  font-family: 'Francois One';
+  font-weight: 700;
+  font-size:20px;
+  line-height:22px;
   } 
 
 .sidebarGroup h3{
-  font-size:16px;
-  line-height:18px;
+  font-family: 'Francois One';
+  font-weight: 700;
+  font-size:20px;
+  line-height:22px;
   } 
 
 .sidebarGroup small{
@@ -148,7 +167,7 @@ footer {
     }
 
 body{
-    font-family: 'Noto Serif';
+    font-family: 'Lato';
     font-size: 22px;
     line-height: 33px;
     color: #404040;
@@ -158,18 +177,24 @@ blockquote p{
   margin-bottom:0; font-size:20px; font-style:italic; font-weight:300 ;}
 
 h1{
-    font-size:28px;
+    font-family: 'Francois One';
+    font-size:30px;
+    font-weight: bold;
     text-align:left;
     padding-bottom:20px;
 }
 
 h2{
-    font-size:24px;
+    font-family: 'Francois One';
+    font-size:26px;
+    font-weight: bold;
     text-align:left;
 }
 
 h3{
-font-size:22px;
+    font-family: 'Francois One';
+    font-size:24px;
+    font-weight: bold;    
     text-align:left;
 }
 
