font-weight fix

--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -112,14 +112,14 @@ footer {
 
 .sidebarGroup h2{
   font-family: 'Francois One';
-  font-weight: 700;
+  font-weight: bold;
   font-size:20px;
   line-height:22px;
   } 
 
 .sidebarGroup h3{
   font-family: 'Francois One';
-  font-weight: 700;
+  font-weight: bold;
   font-size:20px;
   line-height:22px;
   } 
