--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -111,14 +111,14 @@ footer {
   }  
 
 .sidebarGroup h2{
-  font-family: 'Francois One';
+  font-family: 'Lato';
   font-weight: bold;
   font-size:20px;
   line-height:22px;
   } 
 
 .sidebarGroup h3{
-  font-family: 'Francois One';
+  font-family: 'Lato';
   font-weight: bold;
   font-size:20px;
   line-height:22px;
@@ -148,24 +148,24 @@ blockquote p{
   margin-bottom:0; font-size:20px; font-style:italic; font-weight:300 ;}
 
 h1{
-    font-family: 'Francois One';
+    font-family: 'Lato';
     font-size:30px;
     font-weight: bold;
     text-align:left;
-    padding-bottom:20px;
+    /*padding-bottom:20px;*/
 }
 
 h2{
-    font-family: 'Francois One';
+    font-family: 'Lato';
     font-size:26px;
     font-weight: bold;
     text-align:left;
 }
 
 h3{
-    font-family: 'Francois One';
+    font-family: 'Lato';
     font-size:24px;
-    font-weight: bold;    
+    font-weight: bold;
     text-align:left;
 }
 
