make tag line bold

--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -53,6 +53,7 @@
   font-family: 'Lato';
   font-size:32px;
   letter-spacing:5px;
+  font-weight:bold;
   text-align:center;
   color:#595959;
   padding-top: 30px;
