--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,3 +1,4 @@
+<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 <script>
 
 const GH_API_URL = 'https://api.github.com/repos/bitsgalore/bitsgalore.github.io/issues/{{page.comment_id}}/comments';
@@ -38,7 +39,7 @@ function createCommentEl( response ) {
 
 	let commentContents = document.createElement( 'div' );
 	commentContents.classList.add( 'comment-content' );
-	commentContents.innerHTML = response.body;
+	commentContents.innerHTML = marked(response.body);
 
 	let comment = document.createElement( 'li' );
 	comment.setAttribute( 'data-created', response.created_at );
