--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,4 +1,4 @@
-<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+<script src="https://unpkg.com/showdown/dist/showdown.min.js"></script>
 <script>
 
 const GH_API_URL = 'https://api.github.com/repos/bitsgalore/bitsgalore.github.io/issues/{{page.comment_id}}/comments';
@@ -39,7 +39,13 @@ function createCommentEl( response ) {
 
 	let commentContents = document.createElement( 'div' );
 	commentContents.classList.add( 'comment-content' );
-	commentContents.innerHTML = marked(response.body);
+	commentContents.innerHTML = response.body;
+
+	// Progressive enhancement.
+	if ( window.showdown ) {
+		let converter = new showdown.Converter();
+		commentContents.innerHTML = converter.makeHtml( response.body );
+	}
 
 	let comment = document.createElement( 'li' );
 	comment.setAttribute( 'data-created', response.created_at );
