moved comments to bottom of post, removed duplicate hr

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,3 +3,6 @@ layout: default
 ---
 {% include JB/setup %}
 {% include themes/twitter/post.html %}
+{% if page.comment_id %}
+  {% include comments.html %}
+{% endif %}
