--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -210,6 +210,26 @@ code{
     font-size:16px;
 }
 
+.button {
+  background-color: #595959;
+  border: none;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  text-align: left;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+}
+
+.moreButton {
+  text-align: center;
+}
+
 .navbar .nav {
   float: right; }
 
