--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -219,8 +219,6 @@ code{
   padding-right: 20px;
   padding-top: 5px;
   padding-bottom: 5px;
-  margin-top: 20px;
-  margin-bottom: 20px;
   text-align: left;
   text-decoration: none;
   display: inline-block;
@@ -232,7 +230,9 @@ code{
   color: #595959;
 }
 
-.moreButton {
+.moreButtonArea {
+  margin-top: 20px;
+  margin-bottom: 40px;
   text-align: center;
 }
 
