use button to post comments

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -68,6 +68,8 @@ request.send();
     <!-- Adapted from https://aristath.github.io/blog/static-site-comments-using-github-issues-api -->
     <h2>Comments</h2>
     <ul id="gh-comments-list"></ul>
-	<p id="leave-a-comment"><a target="_blank" href="https://github.com/bitsgalore/bitsgalore.github.io/issues/{{page.comment_id}}">Post a comment</a>  (opens Github issue page for this post)</p>
+	<div class="buttonArea">
+	  <a target="_blank" href="https://github.com/bitsgalore/bitsgalore.github.io/issues/{{page.comment_id}}" class="button">Post comment (Github)</a>
+	</div>
 </div>
 <hr>
