--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -230,7 +230,7 @@ code{
   color: #595959;
 }
 
-.moreButtonArea {
+.buttonArea {
   margin-top: 20px;
   margin-bottom: 40px;
   text-align: center;
