--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -67,16 +67,44 @@
   padding: 15px;
   }
 
-.pagination{
-  text-align:center;
-  font-size:14px;
-  font-weight:bold;
-  }
+.pagination {
+  text-align: center;
+  font-size: 18px;
+  font-weight: bold;
+}
 
-.pagination em{
-text-decoration: underline;
-  }
 
+.pagination a {
+  color: #595959;
+  background-color: white;
+  margin-left: 2px;
+  margin-right: 2px;
+  padding-left: 2px;
+  padding-right: 2px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  text-decoration: none;
+}
+
+.pagination a.active {
+  background-color:white;
+  color: #595959;
+  border-radius: 4px;
+}
+  
+.pagination a:hover:not(.active) {
+  background-color: #e5e5e5;
+  color: #595959;
+  border-radius: 4px;
+}
+
+.pagination a:not(.active) {
+  background-color: #595959;
+  color: white;
+  border-radius: 4px;
+}
+
+*/
 .post-entry{padding-bottom:25px;}
 
 .post-entry .date {
