--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -331,7 +331,19 @@ code{
   border: 1px solid #4c964d;
   color: #FFF; }
 
-  .github-comments ul{
+.archive ul{
+  list-style-type: none;
+  padding-left: 20px;
+  margin: 0px;
+}
+
+.archive li{
+  text-indent: -20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.github-comments ul{
     list-style-type: none;
     margin-left: 0px;
     margin-top: 20px;
