--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -204,6 +204,11 @@ h3{
   margin-right: auto;
  }
 
+ .content img{
+  margin-top: 20px;
+  margin-bottom: 20px;
+ }
+
 figure{
   display:inline-block;
   margin-left: auto;
@@ -211,20 +216,24 @@ figure{
   padding-left:0px;
   padding-right:0px;
   margin-top:0px;
-  margin-bottom:20px;
+  margin-bottom: 0px;
   }
+
+figure img{
+  margin-bottom: 20px;
+}
 
 figure figcaption{
     font-size:18px;
     font-style:italic;
-    margin-top: 10px;
+    margin-top: -10px;
     margin-bottom: 20px;
     text-align: left;}
 
 table{
   font-size:18px;line-height:22px;
   border-collapse:collapse;
-  margin-top: 10px;
+  margin-top: 20px;
   margin-bottom: 20px;
   }
 
