--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -224,11 +224,14 @@ figure img{
 }
 
 figure figcaption{
-    font-size:18px;
+    font-size:20px;
     font-style:italic;
+    line-height: 30px;
     margin-top: -10px;
     margin-bottom: 20px;
-    text-align: left;}
+    text-align: left;
+    padding-left: 20px;
+    text-indent: -20px;}
 
 table{
   font-size:18px;line-height:22px;
