better formatting of block quotes

--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -175,8 +175,30 @@ body{
     line-height: 150%;
   }
 
-blockquote p{
-  margin-bottom:0; font-size:20px; font-style:italic; font-weight:400;}
+blockquote {
+  background: #f9f9f9;
+  border-left: 10px solid #ccc;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+  quotes: "\201C""\201D""\2018""\2019";
+}
+blockquote:before {
+  color: #ccc;
+  content: open-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
+}
+blockquote p {
+  display: inline;
+  font-family: 'Lato';
+  font-weight: normal;
+  font-style: italic;
+  font-size: 22px;
+  color: #595959;
+  line-height: 150%;
+}
 
 .content h1{
     font-family: 'Lato';
