--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -190,6 +190,9 @@ blockquote:before {
   margin-right: 0.25em;
   vertical-align: -0.4em;
 }
+blockquote:after {
+  content: no-close-quote;
+}
 blockquote p {
   display: inline;
   font-family: 'Lato';
