--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -387,14 +387,14 @@ code, pre{
 
 .archive ul{
   list-style-type: none;
-  padding-left: 20px;
+  /*padding-left: 20px;*/
   margin: 0px;
 }
 
 .archive li{
-  text-indent: -20px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  /*text-indent: -20px;*/
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .github-comments ul{
