--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -392,12 +392,12 @@ code, pre{
 
 .archive ul{
   list-style-type: none;
-  /*padding-left: 20px;*/
+  padding-left: 20px;
   margin: 0px;
 }
 
 .archive li{
-  /*text-indent: -20px;*/
+  text-indent: -20px;
   padding-top: 5px;
   padding-bottom: 5px;
 }
