--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -65,7 +65,7 @@
           <h3><a href="https://github.com/bitsgalore/bitsgalore.github.io/issues" target="_blank">Report a problem with this site</a></h3>
       </div>
 	    <div class="sidebarGroup">
-        <h3><a href="{{ site.url }}/rss.xml">RSS feed</a><h3>
+        <h3><a href="{{ site.url }}/rss.xml">RSS feed</a></h3>
         <h3><a href="{{ site.url }}/atom.xml">ATOM feed</a></h3>
 	    </div>
 
