added css that overrules borders for list elements within a comment

--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -418,6 +418,14 @@ code, pre{
   margin-bottom: 20px;
 }
 
+.github-comments li ul li{
+  border: none;
+}
+
+.github-comments li ol li{
+  border: none;
+}
+
 .github-comments .user{
   font-weight: bold;
 }
