--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,7 +1,7 @@
 <script src="https://unpkg.com/showdown/dist/showdown.min.js"></script>
 <script>
 
-const GH_API_URL = 'https://api.github.com/repos/bitsgalore/bitsgalore.github.io/issues/{{page.comment_id}}/comments';
+const GH_API_URL = 'https://api.github.com/repos/bitsgalore/bitsgalore.github.io/issues/{{page.comment_id}}/comments?per_page=100';
 
 let request = new XMLHttpRequest();
 request.open( 'GET', GH_API_URL, true );
