--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,4 +1,6 @@
-<script src="https://unpkg.com/showdown/dist/showdown.min.js"></script>
+<script src="https://unpkg.com/showdown/dist/showdown.min.js"
+integrity="sha384-TTjj1KxpUMxMChPbgmSWLlfEep0/67X86v9lnJMkldzkQGHZNAhZRgE9owovIRyz"
+crossorigin="anonymous"></script>
 <script>
 
 const GH_API_URL = 'https://api.github.com/repos/bitsgalore/bitsgalore.github.io/issues/{{page.comment_id}}/comments?per_page=100';
