--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
+    {% if paginator.page > 1 %}<meta name="robots" content="noindex">{% endif %}
     {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
     <meta name="author" content="{{ site.author.name }}">
 
