rearranged side bar

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -60,7 +60,8 @@
       <div id="sidebarRight">
 
       <div class="sidebarGroup">
-        <p><a href="{{ HOME_PATH }}"><img src="{{ BASE_PATH }}/images/bgava.png" alt="bitsgalore avatar"  width="159" height="200"></a></p>
+        <p><a href="{{ site.url }}/about.html"><img src="{{ BASE_PATH }}/images/bgava.png" alt="bitsgalore avatar"  width="159" height="200"></a></p>
+        <h3><a href="{{ site.url }}/about.html">About</a></h3>
       </div>
 
       <div class="sidebarGroup">
@@ -99,15 +100,16 @@
       </div>
 
       <div class="sidebarGroup">
-        <h3><a href="{{ site.url }}/about.html">About</a></h3>
+        <h2>Social</h2>
         <h3><a href="https://twitter.com/bitsgalore" target="_blank">Twitter</a></h3>
         <h3><a href="https://digipres.club/@bitsgalore" target="_blank">Mastodon (digipres.club)</a></h3>
         <h3><a href="https://github.com/bitsgalore/bitsgalore.github.io/issues" target="_blank">Report a problem with this site</a></h3>
       </div>
 
       <div class="sidebarGroup">
-        <h3><a href="{{ site.url }}/rss.xml">RSS feed</a></h3>
-        <h3><a href="{{ site.url }}/atom.xml">ATOM feed</a></h3>
+        <h2>Feeds</h2>
+        <h3><a href="{{ site.url }}/rss.xml">RSS</a></h3>
+        <h3><a href="{{ site.url }}/atom.xml">ATOM</a></h3>
       </div>
 
       </div>
