--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -367,9 +367,9 @@ code, pre{
   opacity: 0.9; }
 
 .tag_box.inline li {
-  float: left; }
+  float: none; }
 
-.tag_box a {
+.tag_box details {
   padding: 3px 6px;
   margin: 2px;
   background: #eee;
@@ -378,14 +378,14 @@ code, pre{
   text-decoration: none;
   border: 1px dashed #cccccc; }
 
-.tag_box a span {
+.tag_box details span {
   vertical-align: super;
   font-size: 0.8em; }
 
-.tag_box a:hover {
+.tag_box details:hover {
   background-color: #e5e5e5; }
 
-.tag_box a.active {
+.tag_box details.active {
   background: #57A957;
   border: 1px solid #4c964d;
   color: #FFF; }
