--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -123,7 +123,7 @@
         <footer>
 	      <p><small>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
             with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-            and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a></small></p>
+            and <a href="https://getbootstrap.com/" target="_blank">Twitter Bootstrap. </a></small></p>
         </footer>
 
       </div>	
