--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,4 +1,4 @@
-<script src="https://unpkg.com/showdown/dist/showdown.min.js"
+<script src="https://unpkg.com/showdown@1.9.1/dist/showdown.min.js"
 integrity="sha384-TTjj1KxpUMxMChPbgmSWLlfEep0/67X86v9lnJMkldzkQGHZNAhZRgE9owovIRyz"
 crossorigin="anonymous"></script>
 <script>
